fix: White Gap Removed
~ Fixed overflow issue in parent div

--- a/src/css/timetable.module.css
+++ b/src/css/timetable.module.css
@@ -1,16 +1,11 @@
 .timetable {
-  /* width:; */
   font-size: 1.2rem;
   display: table;
   justify-content: center;
   align-items: center;
-  scroll-padding-inline-start: 0;
   border-spacing: 5px 10px;
 }
 
-/* .head{
-
-} */
 .slots {
   margin: 10rem;
   text-align: center;
@@ -53,7 +48,6 @@
   text-align: center;
 }
 .timetableContainer {
-  /* position: relative; */
   display: flex;
   width: 90vw;
   align-self: center;
@@ -74,9 +68,9 @@
   .timetableContainer {
     justify-content: flex-start;
     align-items: flex-start;
-    /* padding: .8rem; */
     box-sizing: border-box;
     display: flex;
+    /* overflow: hidden; */
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
@@ -84,7 +78,6 @@
     width: 100%;
     justify-content: flex-start;
     align-items: flex-start;
-    /* padding: .8rem; */
     box-sizing: border-box;
     height: fit-content;
   }
